--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,6 +1,8 @@
 .home{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     background-color: #eee;
+
     padding-bottom: 100%;
 }
