--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,29 +1,43 @@
+.card_main {
+  display: flex;
+}
+
 .card {
-  background-color: #fff;
+  background-image: linear-gradient(to right, #f5f5f5, #c8edf3);
   /* padding: 110px; */
-  margin: 20px;
+  margin: 3.5em;
   /* margin-bottom: 100px; */
 
   border-radius: 20px;
-  width: 230px;
+  width: 290px;
   box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.3);
   cursor: pointer;
 }
 
 .card:hover {
-  box-shadow: 0 16px 24px 0 rgba(0, 0, 0, 0.3);
+  transition: 400ms linear;
+
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
-.photos {
+.photos > img {
   width: 100%;
   height: 200px;
   /* object-fit: cover; */
   border-radius: 20px 20px 0 0;
 }
-
+.card_infos {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
 .title {
   text-align: center;
-  font-size: 40px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  font-size: 30px;
   margin-bottom: 10px;
 }
 
@@ -34,32 +48,42 @@
 }
 
 .time-date {
-  margin-left: 10px;
+  /* margin-left: 10px; */
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
 }
 
 .date {
   color: teal;
   margin-right: 10px;
+  font-family: "Roboto", sans-serif;
 }
 
 .cat__type {
   padding: 2px;
-  margin-right: 10px;
-  border: 1px solid black;
+  font-family: "Roboto", sans-serif;
+
+  /* margin-right: 10px; */
+  border: none;
+  padding: 10px;
   border-radius: 5px;
   background-color: teal;
   color: #fff;
 }
 
 .cat__type:hover {
-  background-color: rgb(47, 83, 17);
+  transition: 400ms linear;
+  background-color: #000;
 }
 
 .desc {
-  margin: 5px;
-  margin-top: 15px;
+  /* margin: 5px; */
+  display: flex;
+  margin-top: 18px;
+  text-align: start;
   line-height: 24px;
-
+  color: #000;
+  font-family: "Roboto", sans-serif;
   font-size: 15px;
   line-height: 20px;
 }
