--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -2,10 +2,12 @@
   background-color: #fff;
   /* padding: 110px; */
   margin: 20px;
+ 
+
   /* margin-bottom: 100px; */
 
   border-radius: 20px;
-  width: 230px;
+  width: 250px;
   box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.3);
   cursor: pointer;
 }
@@ -23,7 +25,7 @@
 
 .title {
   text-align: center;
-  font-size: 40px;
+  font-size: 30px;
   margin-bottom: 10px;
 }
 
@@ -45,21 +47,30 @@
 .cat__type {
   padding: 2px;
   margin-right: 10px;
-  border: 1px solid black;
+  border: 1px solid teal;
   border-radius: 5px;
   background-color: teal;
   color: #fff;
 }
 
 .cat__type:hover {
-  background-color: rgb(47, 83, 17);
+  background-color: rgb(6, 42, 53);
 }
 
 .desc {
+  
   margin: 5px;
   margin-top: 15px;
-  line-height: 24px;
+  /* line-height: 24px; */
 
   font-size: 15px;
-  line-height: 20px;
+  /* line-height: 20px; */
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical; 
+  overflow: hidden;
+  
+  
+  
 }
+
