--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -16,35 +16,27 @@
 
 .right__header {
   display: flex;
-  align-items:center; 
+  align-items: center;
   justify-content: center;
-  
 }
-.search__input {
+.search__input > input {
   width: 270px;
 
   height: 30px;
   border-radius: 15px;
   margin-left: 10px;
-}
-
-.right__header > input {
   font-size: 15px;
   padding-left: 5px;
   outline: none;
 }
 
-.search{
+.search {
   color: rgb(238, 229, 229);
   padding-left: 10px;
   cursor: pointer;
   transform: scale(1.2);
-  
-  
-  
 }
 
-.search:hover{
-  color:cadetblue;
+.search:hover {
+  color: cadetblue;
 }
-
