--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  border-bottom: 1px solid black;
+  border-bottom: 8px solid grey;
   background-color: #000;
   color: #fff;
   padding: 20px;
