--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,15 +1,15 @@
 .home {
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* flex-wrap: wrap; */
-
   background-color: #eee;
-
-  /* padding-bottom: 100%; */
 }
-.home_container {
-  display: flex;
-  flex-wrap: wrap;
+
+.top__movie {
   
-  justify-content: space-around;
+  font-size: 50px;
+  font-weight: bold;
+ 
+  margin-bottom: 20px;
+  margin-left: 150px;
+  /* border: 1px solid black; */
+  
+
 }
