--- a/src/pages/singlepage/singlepage.css
+++ b/src/pages/singlepage/singlepage.css
@@ -89,6 +89,28 @@
   font-size: 16px;
 }
 
+.movie__info{
+  display: flex;
+  flex-direction: column;
+  color: #353030;
+  font-size: 18px;
+  line-height: 25px;
+  font-family: "Roboto", sans-serif;
+
+  
+}
+
+.infos{
+  display: flex;
+align-items: center;
+justify-content: flex-start;
+}
+
+.infos__ans{
+
+  padding-left: 10px;
+}
+
 .watch__now{
     padding: 16px;
   
