--- a/src/pages/singlepage/singlepage.css
+++ b/src/pages/singlepage/singlepage.css
@@ -9,19 +9,34 @@
 .row__1 {
   flex: 4;
   padding-right: 20px;
+  overflow: hidden;
+
+
+  
 }
 
 .row__2 {
   flex: 8;
   padding-left: 40px;
+ 
   /* background-color:yellow; */
+
 }
 
 .image {
   border: 5px solid #808080;
   width: 100%;
-  height: 40vw;
+  height: 60vh;
   border-radius: 20px;
+  transition: all 0.2s linear;
+  cursor: pointer;
+  
+}
+
+.image:hover{
+  transform: scale(1.2);
+  border: 5px solid #808080;
+  border-radius: 50px;
 }
 
 .title {
@@ -33,6 +48,8 @@
   color: #161515;
   font-weight: bold;
   font-family: "Encode Sans SC", sans-serif;
+  padding-bottom: 25px;
+  cursor: pointer;
 }
 
 .category {
@@ -49,10 +66,18 @@
 
   border-radius: 5px;
   background-color: teal;
-  color: #fff;
+  
   font-size: 15px;
   font-family: "Roboto", sans-serif;
   font-size: 13px;
+  transition: 0.5s;
+  
+}
+
+.quality:hover{
+  cursor: pointer;
+  color: #f5deb3;
+  background-color: #194646;
 }
 
 .time {
@@ -77,6 +102,15 @@
   font-size: 13px;
   font-weight: bolder;
   text-transform: uppercase;
+  transition: all 0.3s linear;
+  box-shadow: 0 8px 12px 0 rgba(211, 129, 36, 0.3);
+  
+}
+
+.rating:hover{
+  cursor: pointer;
+  background-color: #d2691e;
+  /* color: wheat; */
 }
 
 .overview {
@@ -85,7 +119,7 @@
   padding-bottom: 20px;
 
   line-height: 20px;
-  color: gray;
+  color: #504b4b;
   font-size: 16px;
 }
 
@@ -129,13 +163,13 @@ justify-content: flex-start;
   font-weight: bolder;
   text-transform: uppercase;
   color: black;
-  box-shadow: 0 8px 12px 0 rgba(210, 15, 15, 0.302);
+  box-shadow: 0 15px 10px 0 rgba(34, 82, 187, 0.302);
 
   transition:  0.8s;
 }
 
 .watch__now:hover{
     color: white;
-    background-color: #0c2e2e;
+    background-color: #368080;
     cursor: pointer;
 }
